txt-output/111.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: == should of type Int -> Int -> Int
fac n = if n == 0 then 1 else n * fac (n == 1)          

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\111.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\111.hs:6:16:
    No instance for (Num Bool)
      arising from the literal `0' at ill-typed\111.hs:6:16
    Possible fix: add an instance declaration for (Num Bool)
    In the second argument of `(==)', namely `0'
    In the expression: n == 0
    In the expression: if n == 0 then 1 else n * fac (n == 1)


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\111.hs, ill-typed\111.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\111.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\111.hs:6:17: error:
    * No instance for (Num Bool) arising from the literal `0'
    * In the second argument of `(==)', namely `0'
      In the expression: n == 0
      In the expression: if n == 0 then 1 else n * fac (n == 1)
  |
6 | fac n = if n == 0 then 1 else n * fac (n == 1)          
  |                 ^
